# wows-replays

./: .gitignore  Cargo.toml  pyproject.toml
src/: lib.rs  main.py
src/extract/: unpack.py
src/replay_unpack/: __init__.py  models.py  parser.py  utils.py
src/replay_unpack/clients/wows/: __init__.py  controller.py  helper.py  player.py
src/replay_unpack/clients/wows/network/packets/: BattleResults.py  CameraFreeLook.py  CameraMode.py  CellPlayerCreate.py  CruiseState.py  EntityCreate.py  Map.py  __init__.py  (+2 more)
src/replay_unpack/core/: __init__.py  battle_controller.py  entity.py  pretty_print_mixin.py
src/replay_unpack/core/entity_def/: __init__.py  base_definition.py  bit_reader.py  constants.py  definitions.py  entity_description.py
src/replay_unpack/core/entity_def/data_types/: __init__.py  base.py  math.py  nested_types.py  numeric.py  other.py
src/replay_unpack/core/network/: net_packet.py  player.py
src/replay_unpack/core/network/types/: __init__.py  binary_stream.py  matrix_4.py  vector_3.py
src/replay_unpack/core/packets/: BasePlayerCreate.py  Camera.py  CellPlayerCreate.py  EntityControl.py  EntityCreate.py  EntityEnter.py  EntityLeave.py  EntityMethod.py  EntityProperty.py  Map.py  NestedProperty.py  Position.py  Version.py  __init__.py
src/replay_unpack/fixtures/: CamouflageInfo.py  PlayerModeDef.py
tests/replays/12_6_0/: aerodrome_kill.wowsreplay  arms_race.wowsreplay  hydrophone.wowsreplay  jager.wowsreplay  newport.wowsreplay  unspotted_kill.wowsreplay
tests/replays/12_7_0/: priority_target.wowsreplay  smoke.wowsreplay  test.wowsreplay
(+3 files in other folders)
